# Browser-Automation-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/agentbrowser/: cli.py
src/agentbrowser/config/: settings.py
src/agentbrowser/core/: agent.py  runner.py
src/agentbrowser/exporters/: base.py  csv_exporter.py  json_exporter.py
src/agentbrowser/utils/: logger.py
