[project]
name = "agentbrowser"
version = "1.0.0"
description = "Production-ready browser automation agent with CLI interface"
requires-python = ">=3.11"

dependencies = [
    "browser-use>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
agentbrowser = "agentbrowser.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbrowser"]
